--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Shulin Jiang's Portfolio</title>
+    
+    <!-- <link rel="stylesheet" text="text/css" href="./assets/css/reset.css"> -->
     <link rel="stylesheet" text="text/css" href="./assets/css/style.css">
   </head>
 
