final final draft

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfolio</title>
+        <link rel="stylesheet" text="text/css" href="./assets/css/reset.css">
         <link rel="stylesheet" text="text/css" href="assets/css/style.css">
     </head>
 
     <body>
             <div class="mainNavBg">
                 <div class="mainNav">
-                    <h1 id="head">Shulin Jiang</h1>
+                    <div class="head">
+                        <h1 id="head">Shulin Jiang</h1>
+                    </div>
             
                     <div class="nav">
                         <a href="./index.html" id="button-1">About</a>
@@ -41,10 +44,9 @@
             </section>
         </div>
 
-        <section id="divider2">
-            <section id="footer">
-                <p>Copyright@</p>
-            </section>
+        <section id="divider2"></section>
+        <section id="footer">
+          <p id="copyright">Copyright@</p>
         </section>
     </body>
 </html>
