--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Contact Page</title>
+        <link rel="stylesheet" text="text/css" href="./assets/css/reset.css">
         <link rel="stylesheet" text="text/css" href="assets/css/style.css">
     </head>
 
@@ -10,7 +11,9 @@
 
             <div class="mainNavBg">
                 <div class="mainNav">
-                    <h1 id="head">Shulin Jiang</h1>
+                    <div class="head">
+                        <h1 id="head">Shulin Jiang</h1>
+                    </div>
             
                     <div class="nav">
                         <a href="./index.html" id="button-1">About</a>
@@ -43,10 +46,9 @@
             </form>
         </div>
 
-        <section id="divider2">
-            <section id="footer">
-                <p>Copyright@</p>
-            </section>
+        <section id="divider2"></section>
+        <section id="footer">
+          <p id="copyright">Copyright@</p>
         </section>
     </body>
 </html>
